Add /var/run/pulse layout mapping for socket communication

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -57,6 +57,8 @@ layout:
     bind: $SNAP/etc/alsa
   /var/lib/pulse:
     bind: $SNAP_DATA
+  /var/run/pulse:
+    bind: $SNAP_COMMON/var/run/pulse
   /usr/share/pulseaudio:
     symlink: $SNAP/usr/share/pulseaudio
   /usr/share/alsa:
