--- a/src/etc/pulse/client.conf
+++ b/src/etc/pulse/client.conf
@@ -1,8 +1,8 @@
 # PulseAudio client configuration for Ubuntu Core
 # This configures client applications to connect to the system PulseAudio daemon
 
-# Connect to system daemon via socket
-default-server = unix:/var/run/pulse/native
+# Socket location is set via PULSE_RUNTIME_PATH environment variable
+# (set by the client-wrapper to $SNAP_COMMON/var/run/pulse)
 
 # Auto-spawn is disabled (we use a daemon service)
 autospawn = no
